--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -809,3 +809,10 @@ filter_contents_task:
     - filters
   status: prototype
   description: 'Content is text blocks, with optional figures, per OTU. Search and return sets by text, topic, or OTU.'
+source_citation_totals_task:
+  hub: false 
+  name: 'Source citation totals'
+  related:
+  categories:
+  status: prototype
+  description: 'Report a count per citation object type for each source in the result.'
