--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,16 +57,16 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
     
-    - name: Set up Ruby 3.2
+    - name: Set up Ruby 3.1
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.2
+        ruby-version: 3.1
         
     - name: Set up Ruby Bundler gems cache
       uses: actions/cache@v3
       with:
         path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('.ruby-version', '**/Gemfile', '**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
+        key: ${{ runner.os }}-gems-rev6-${{ hashFiles('**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
 
     - name: Set up Node 16 LTS
       uses: actions/setup-node@v3
