--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,10 +68,10 @@ jobs:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('.ruby-version', '**/Gemfile', '**/Gemfile.lock', 'exe/install-imagemagick7.sh') }}
 
-    - name: Set up Node 16 LTS
+    - name: Set up Node 18 LTS
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'
 
     - name: Set up Node packages cache
       uses: actions/cache@v3
@@ -79,7 +79,7 @@ jobs:
         path: |
           ~/.npm
           **/node_modules
-        key: ${{ runner.os }}-node-rev6-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node-18-${{ hashFiles('**/package-lock.json') }}
 
     - name: Set up assets cache
       uses: actions/cache@v3
