--- a/.github/workflows/deliver.yml
+++ b/.github/workflows/deliver.yml
@@ -91,6 +91,7 @@ jobs:
           }
 
     - name: Login to DockerHub
+      if: ${{ github.event_name != 'pull_request' }}
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -105,8 +106,9 @@ jobs:
           return context.ref.startsWith('refs/tags/v') ? context.ref.replace('refs/tags/v', '') : 'latest'
 
     - name: Push image to DockerHub
+      if: ${{ github.event_name != 'pull_request' }}
       env:
-        DOCKER_TAG: '3010_low_res_presence_absence'
+        DOCKER_TAG: '${{steps.docker_tag.outputs.result}}'
       run: |
         docker tag sfgrp/taxonworks:latest sfgrp/taxonworks:$DOCKER_TAG
         docker push sfgrp/taxonworks:$DOCKER_TAG
