--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -1,11 +1,11 @@
-# Note: You must restart bin/webpacker-dev-server for changes to take effect
+# Note: You must restart bin/shakapacker-dev-server for changes to take effect
 
 default: &default
   source_path: app/javascript
   source_entry_path: /packs
   public_root_path: public
   public_output_path: packs
-  cache_path: tmp/webpacker
+  cache_path: tmp/shakapacker
   webpack_compile_output: true
 
   # Location for manifest.json, defaults to {public_output_path}/manifest.json if unset
