--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -832,3 +832,11 @@ geographic_area_usage_task:
   categories:
   status: prototype
   description: 'Summarize this projects geographic area usage'
+
+index_stats_task:
+  hub: true
+  name: 'TODO: Task name'
+  related:
+  categories:
+  status: prototype
+  description: 'TODO: Task description'
