--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -832,11 +832,10 @@ geographic_area_usage_task:
   categories:
   status: prototype
   description: 'Summarize this projects geographic area usage'
-
-index_stats_task:
-  hub: true
-  name: 'TODO: Task name'
+taxon_name_stats_task:
+  hub: false 
+  name: 'Taxon name stats'
   related:
   categories:
   status: prototype
-  description: 'TODO: Task description'
+  description: 'Plot stats / year for taxon name filter results.'
