--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,10 +57,8 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
     
-    - name: Set up Ruby 3.2
+    - name: Set up Ruby
       uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.2
         
     - name: Set up Ruby Bundler gems cache
       uses: actions/cache@v3
