--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -8,11 +8,10 @@ ADD config/docker/nginx/gzip_max.conf /etc/nginx/conf.d/gzip_max.conf
 
 # TaxonWorks dependencies
 COPY exe/install-imagemagick7.sh /usr/local/bin
-RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main' >> /etc/apt/sources.list.d/pgdg.list && \
+RUN echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list && \
       curl -sL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
-      sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list && apt-get update && \
-      curl -sL https://deb.nodesource.com/setup_18.x | bash - && \
-      apt-get install -y locales software-properties-common \ 
+      echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x nodistro main" > /etc/apt/sources.list.d/nodesource.list && \
+      apt update && apt-get install -y locales software-properties-common \
                          postgresql-client-15 \
                          build-essential autoconf libtool git-core jq \
                          libffi-dev libgdbm-dev libncurses5-dev libreadline-dev libssl-dev libyaml-dev zlib1g-dev libcurl4-openssl-dev \
@@ -37,7 +36,7 @@ RUN echo 'gem: --no-rdoc --no-ri >> "$HOME/.gemrc"'
 RUN gem update --system
 RUN gem install bundler
 
-FROM ubuntu:20.04 AS imagemagick
+FROM ubuntu:22.04 AS imagemagick
 RUN apt-get update && apt-get install -y imagemagick
 
 FROM base
