--- a/config/interface/hub/data.yml
+++ b/config/interface/hub/data.yml
@@ -48,6 +48,14 @@ Core: # a Section
     related_models:
       - ObservationMatrix
     status: :prototype
+  FieldOccurrence:
+    status: :stable
+    related_models:
+      - TaxonName
+      - TaxonDetermination
+    categories:
+      - CollectingEvent
+      - TaxonDetermination
   Observation:
     categories:
       - matrix
