Add defineModel to ESLint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "jquery": true,
     "defineEmits": true,
     "defineProps": true,
-    "defineExpose": true
+    "defineExpose": true,
+    "defineModel": true
   },
   "rules": {
     "space-before-function-paren": [
