New field occurrence task scaffold

--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -846,3 +846,11 @@ stepwise_collectors_task:
     - people
   status: prototype
   description: 'Parse verbatim collectors into their semantic components.'
+
+index_new_field_occurrences_task:
+  hub: true
+  name: 'TODO: Task name'
+  related:
+  categories:
+  status: prototype
+  description: 'TODO: Task description'
