#1691 Add Lead as a data card

--- a/config/interface/hub/data.yml
+++ b/config/interface/hub/data.yml
@@ -210,6 +210,8 @@ Supporting:
       - CollectionObject
       - CollectingEvent
       - TaxonDetermination
+  Lead:
+    status: :prototype
   Loan:
     status: :prototype
     categories:
