FieldOccurrence object radial config

--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -93,11 +93,11 @@ Extract:
     recent: true
 FieldOccurrence:
   tasks:
+    - new_field_occurrence_task
   config:
     recent: true
   edit: new_field_occurrence_task
   new: new_field_occurrence_task
-  home: new_field_occurrence_task
 GeographicArea:
   tasks:
     - asserted_distributions_basic_endemism_task
