rake secret -> rails secret

--- a/k8s/dev/tw-secrets.yml
+++ b/k8s/dev/tw-secrets.yml
@@ -9,5 +9,5 @@ data: # echo -n foo | base64
   db.root.password: dGF4b253b3Jrcw==    # taxonworks 
   db.user: dGF4b253b3Jrc19wcm9kdWN0aW9u # taxonworks_production 
   db.user.password: dGF4b253b3Jrcw==    # taxonworks 
-  secret_key_base: cGFzc3dvcmQ=         # password (replace with `rake secret`)
+  secret_key_base: cGFzc3dvcmQ=         # password (replace with `rails secret`)
   nginx.secret: bmdpbnhfc2VjcmV0        # nginx_secret 
