#1691 Address review comments on Leads scaffolding steps
Some comments were addressed already in other commits.

--- a/config/interface/hub/data.yml
+++ b/config/interface/hub/data.yml
@@ -212,6 +212,8 @@ Supporting:
       - TaxonDetermination
   Lead:
     status: :prototype
+    related_models:
+      - Otu
   Loan:
     status: :prototype
     categories:
