#1691 Generate a new show lead task
This commits the result of running `bin/rails g taxon_works:task show leads/ --vue`.

--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -863,3 +863,11 @@ new_lead_task:
   categories:
   status: prototype
   description: 'Create a new dichotomous key.'
+
+index_show_task:
+  hub: true
+  name: 'TODO: Task name'
+  related:
+  categories:
+  status: prototype
+  description: 'TODO: Task description'
