#1691 Add 'Use key' options to radial navigator and /leads/1 views

--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -100,6 +100,9 @@ GeographicItem:
     - debug_geographic_item_task
   config:
     recent: false
+Lead:
+  tasks:
+    - show_lead_task
 Loan:
   tasks:
     - edit_loan_task
