Add list and links to radial navigator #1643

--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -94,10 +94,10 @@ Extract:
 FieldOccurrence:
   tasks:
     - new_field_occurrence_task
+  edit: new_field_occurrence_task
+  new: new_field_occurrence_task,
   config:
     recent: true
-  edit: new_field_occurrence_task
-  new: new_field_occurrence_task
 GeographicArea:
   tasks:
     - asserted_distributions_basic_endemism_task
