#1691 Use object_radials.yml to specify new and edit lead paths
Note I'm using flash notices in the controller for destroy to cover two cases:
* radial navigator calls /destroy/1.json - it displays its own notice but that notice disappears once the redirect load it calls after delete kicks in; lucky for me the controller flash notice happens to display on the redirected page instead (I don't know why that is).
* The builtin /lead/1 destroy link calls /destroy/1.html; it doesn't display any notice on its own, so the controller flash applies there as well.

--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -103,6 +103,8 @@ GeographicItem:
 Lead:
   tasks:
     - show_lead_task
+  new: new_lead_task
+  edit: new_lead_task
 Loan:
   tasks:
     - edit_loan_task
