--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-turbolinks": "^2.2.2",
     "vue3-hotkey": "^1.0.5",
     "vuedraggable": "^4.1.0",
+    "vuewordcloud": "^19.0.0",
     "vuex": "^4.1.0"
   },
   "version": "0.1.0",
