--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -856,3 +856,11 @@ debug_geographic_item_task:
     - georeference
   status: prototype
   description: 'Report metadat about a geographic item.'
+
+index_project_vocabulary_task:
+  hub: true
+  name: 'TODO: Task name'
+  related:
+  categories:
+  status: prototype
+  description: 'TODO: Task description'
