--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -856,11 +856,10 @@ debug_geographic_item_task:
     - georeference
   status: prototype
   description: 'Report metadat about a geographic item.'
-
-index_project_vocabulary_task:
+project_vocabulary_task:
   hub: true
-  name: 'TODO: Task name'
+  name: 'Project vocabulary'
   related:
   categories:
   status: prototype
-  description: 'TODO: Task description'
+  description: 'Visualize data values used in this project.  Word clouds.'
