--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sfgrp/sled": "^1.0.3",
     "@sfgrp/svg-detailer": "^0.2.5",
     "@sfgrp/svg-radial-menu": "^1.0.7",
+    "@viz-js/viz": "^3.4.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "d3": "^7.8.5",
