--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -910,3 +910,10 @@ week_in_review_task:
     - metadata
   status: prototype
   description: 'A quick look dashboard of past activity'
+spatial_summary_task:
+  hub: false 
+  name: 'Collecting Event Spatial Summary'
+  related:
+  categories:
+  status: prototype
+  description: 'Summarize spatial characteristics of a set of Collecting Events.'
