--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ibm/plex": "^6.4.1",
     "@json2csv/plainjs": "^7.0.6",
     "@json2csv/transforms": "^7.0.6",
+    "@sfgrp/encase": "^0.0.2",
     "@sfgrp/gbifference": "^0.0.5",
     "@sfgrp/sled": "^1.0.3",
     "@sfgrp/svg-detailer": "^0.2.5",
@@ -25,6 +26,7 @@
     "pinia": "^2.1.7",
     "qs": "^6.12.1",
     "shakapacker": "8.0.0",
+    "three": "^0.164.1",
     "v-hotkey": "^0.9.0",
     "v-network-graph": "^0.9.15",
     "vue": "^3.4.27",
