#1954 Initial buildout of Gazetteer

--- a/config/interface/hub/data.yml
+++ b/config/interface/hub/data.yml
@@ -176,6 +176,12 @@ Supporting:
       - biology
       - dna
       - matrix
+  Gazetteer:
+    status: :prototype
+    related_models:
+      - GeographicArea
+      - Georeference
+      - CollectingEvent
   GeneAttribute:
     status: :prototype
     related_models:
