DwC export scoped to proper size.  Fix  #3949.

--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -31,6 +31,7 @@ AssertedDistribution:
 BiologicalAssociation:
   tasks:
     - edit_biological_associations_graph_task
+    - filter_biological_associations_task
   edit: edit_biological_associations_graph_task
   new: edit_biological_associations_graph_task
   config:
