#1954 Make all new links for gazetteer link to the task
This puts two New slices in the nav radial, since that radial requires a task in object_radials.yml; is there a reason for that?

--- a/config/interface/object_radials.yml
+++ b/config/interface/object_radials.yml
@@ -98,6 +98,10 @@ FieldOccurrence:
   new: new_field_occurrence_task,
   config:
     recent: true
+Gazetteer:
+  tasks:
+    - new_gazetteer_task
+  new: new_gazetteer_task
 GeographicArea:
   tasks:
     - filter_asserted_distributions_task
