--- a/config/interface/hub/user_tasks.yml
+++ b/config/interface/hub/user_tasks.yml
@@ -945,11 +945,12 @@ filter_dwc_occurrences_task:
     - filter
   status: prototype
   description: 'Filter records in the DarwinCore index.'
-
-index_new_filename_depicting_image_task:
+new_filename_depicting_image_task:
   hub: true
   name: 'New filename depicting image'
   related:
   categories:
+    - image
+    - collection_object
   status: prototype
-  description: 'TODO: Task description'
+  description: "Upload images assigning them as depictions of CollectionObjects based on the identifier in the filename. You shouldn't really be using this as a day-to-day workflow, there are better approaches."
